# midasio

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  committed.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  rust.yml
examples/: README.md  parallel.rs  single_bank.rs
src/: data_bank.rs  event.rs  file.rs  lib.rs  parse.rs  read.rs  tests.rs
src/read/: data_bank.rs  data_banks.rs  event.rs  events.rs  file.rs
src/read/data_bank/: tests.rs
src/read/data_banks/: tests.rs
src/read/event/: tests.rs
src/read/events/: tests.rs
src/read/file/: tests.rs
