[package]
name = "midasio"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Utilities to read binary files in the MIDAS format"
readme = "README.md"
repository = "https://github.com/MIDAS-rs/midasio"
keywords = ["midas", "daq", "data-acquisition", "physics"]
categories = ["parser-implementations", "science"]
documentation = "https://docs.rs/midasio"

[dependencies]
rayon = { version = "1.8.0", optional = true }
thiserror = "1.0.50"
winnow = "0.5.30"

[dev-dependencies]
paste = "1.0.14"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
