[package]
name = "midasio"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Utilities to read binary files in the MIDAS format"
readme = "README.md"
repository = "https://github.com/MIDAS-rs/midasio"
keywords = ["midas", "daq", "data-acquisition", "physics"]
categories = ["parser-implementations", "science"]
documentation = "https://docs.rs/midasio"

[dependencies]
rayon = { version = "1.8.0", optional = true }
winnow = "0.6.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/MIDAS-rs/midasio/compare/{{tag_name}}...HEAD", exactly=1},
]
